css/plann3dStyles.css
/*
 * File: plann3dStyles.css
 * Authors: Patrick Ferguson and Tom Frauenfelder.
 * Created: 15/09/2015
 * Copyright: Â©2015 Plann3d Pty Ltd
 * Purpose: Styling for all plann3d site elements.
 */

#pointsJS {
    position: absolute;
    display: inline-block;
    top: 0;
    left: 0;
    width: 100%;
    max-width: 100%;
}

#plann3d-hero-vid {
    position: fixed;
    display: block;
    width: auto;
    height: auto;
    min-width: 100vw;
    min-height: 100vh;
    overflow: hidden;
    z-index: 0;
}

.full-height {
    height: 100vh;
}

/* Mobile breakpoints */
@media (max-width: 767px) {
    .hidden-xs {
        display: none !important;
    }
}

.vidCover {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: #000000;
    opacity: 0.5;
}

.plann3dtitle {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 18px;
    color: #FFFFFF;
    letter-spacing: 1.54px;
    line-height: 24px;
}

.headerlinks {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 2.2px;
    line-height: 16px;
}

h1 {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 36px;
    color: #0E1125;
    letter-spacing: 2.2px;
    line-height: 42px;
}

h2 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500; /* Medium */
    font-size: 20px;
    color: #0E1125;
    letter-spacing: 1.2px;
    line-height: 24px;
}

h3 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500; /* Medium */
    font-size: 14px;
    color: #0E1125;
    letter-spacing: 0.85px;
    line-height: 16px;
}

p{
    font-family: 'Raleway', sans-serif;
    font-weight: 300; /* Light */
    font-size: 10px;
    color: #000000;
    letter-spacing: 0.6px;
    line-height: 11px;
}

.buttontext {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 1.4px;
    line-height: 16px;
}

.ghostedtext {
    font-family: 'Raleway', sans-serif;
    font-weight: 300; /* Light */
    font-size: 14px;
    color: #A4A4A4;
    letter-spacing: 0.77px;
    line-height: 16px;
}

.button {
    background: #184B72;
}

.formfield {
    background: #EDEDED;
    box-shadow: inset 0 1px 5px 1px rgba(0,0,0,0.30);
}

.featuremask {
    border: 6px solid #184B72;
}

/* BEGIN PLANN3D TABLE */
#plann3dTable {
    background-color: #E8E8E9;
    height: 144px;
    width: 100%;
}

#plann3dTable img {
    z-index: 10;
}

#plann3dTable .plann3dImac {
    position: relative;
    display: block;
    top: -638px;
    width: 1446px;
    height: 722px;
}

/* Hiding the auxillary elements when they'd intersect the screen bounds */
@media (max-width: 1200px) {
    .hideAuxElems {
        display: none !important;
    }
}

#plann3dTable .auxTableElems {
    display: block;
    width: 1196px;
    top: -1000px;
    z-index: 10;
}

#plann3dTable .plann3dHeadset {
    position: relative;
    display: block;
    top: 120px;
    left: 0px;
    width: 252px;
    height: 187px;
}

#plann3dTable .plann3dTablet {
    position: relative;
    top: -108px;
    left: 450px;
    width: 318px;
    height: 231px;
}
/* END PLANN3D TABLE */

/* BEGIN MAILCHIMP */
#mc_embed_signup .mc-field-group {
    max-height: 0px;
}

#mc_embed_signup {
    background: transparent;
    clear: left;
    font: 14px Helvetica,Arial,sans-serif;
    max-width: 610px;
}

#mc_embed_signup .mc-field-group input {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 12px;
    width: calc(100% - 110px);
    height: 45px;
    top: 0px;
    -webkit-box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
    -moz-box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
    box-shadow: inset 0px 1px 5px 1px rgba(0,0,0,0.3);
}

#mc_embed_signup .button:hover {
    background-color: #0066ab;
}

#mc_embed_signup .button {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 13px;
    background-color: #0066ab;
    position: absolute;
    right: 25px;
    top: 10px;
    margin: 0px;
    padding: 0px;
    width: 110px;
    height: 45px;
    border-radius: 0;
}

/* Signup success or fail */
#mc_embed_signup div#mce-responses {
    display: none;
}
/* END MAILCHIMP */

